--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - POSTGRES_USER=${POSTGRES_USER:-easm_user}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-easm_password}
     ports:
-      - "5432:5432"
+      - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-easm_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-easm_user} -d ${POSTGRES_DB:-easm_db}"]
       interval: 10s
       timeout: 5s
       retries: 5
