--- a/src/charts/easm-api/templates/deployment.yaml
+++ b/src/charts/easm-api/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.easmApi.enabled (ne (.Values.easmApi.enabled | toString) "False") }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -75,3 +76,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
