--- a/src/charts/easm-api/templates/service.yaml
+++ b/src/charts/easm-api/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.easmApi.enabled (ne (.Values.easmApi.enabled | toString) "False") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +14,4 @@ spec:
       name: http
   selector:
     {{- include "easm-api.selectorLabels" . | nindent 4 }}
+{{- end }}
