--- a/src/charts/easm-api/templates/serviceaccount.yaml
+++ b/src/charts/easm-api/templates/serviceaccount.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.serviceAccount.create -}}
+{{- if and .Values.easmApi.enabled (ne (.Values.easmApi.enabled | toString) "False") -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -9,4 +10,5 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
