--- a/skaffold-api-only.yaml
+++ b/skaffold-api-only.yaml
@@ -1,7 +1,7 @@
 apiVersion: skaffold/v4beta7
 kind: Config
 metadata:
-  name: easm-rnd
+  name: easm-api-only
 
 build:
   artifacts:
@@ -16,52 +16,8 @@ build:
 deploy:
   helm:
     releases:
-      # PostgreSQL from Bitnami (Latest LTS)
-      - name: postgresql
-        remoteChart: postgresql
-        repo: https://charts.bitnami.com/bitnami
-        version: "18.1.1"
-        namespace: "{{.K8S_NAMESPACE}}"
-        createNamespace: true
-        setValues:
-          auth.database: easm_db
-          auth.username: easm_user
-          auth.password: easm_password
-          primary.persistence.enabled: false
-          image.pullPolicy: IfNotPresent
-        wait: false
-
-      # Redis from Bitnami (Latest LTS)
-      - name: redis
-        remoteChart: redis
-        repo: https://charts.bitnami.com/bitnami
-        version: "23.2.1"
-        namespace: "{{.K8S_NAMESPACE}}"
-        createNamespace: true
-        setValues:
-          auth.enabled: false
-          architecture: standalone
-          master.persistence.enabled: false
-          image.pullPolicy: IfNotPresent
-        wait: false
-
-      # MongoDB from Bitnami (Latest LTS)
-      - name: mongodb
-        remoteChart: mongodb
-        repo: https://charts.bitnami.com/bitnami
-
-        version: "16.3.1"
-        namespace: "{{.K8S_NAMESPACE}}"
-        createNamespace: true
-        setValues:
-          auth.enabled: false
-          architecture: standalone
-          persistence.enabled: false
-          image.pullPolicy: IfNotPresent
-          image.tag: latest
-        wait: false
-
       # EASM API from local Helm chart
+      # PostgreSQL and Redis are managed separately via helm commands
       - name: easm-api
         chartPath: src/charts/easm-api
         namespace: "{{.K8S_NAMESPACE}}"
@@ -82,9 +38,6 @@ deploy:
           redis.port: "{{.REDIS_PORT}}"
           redis.db: "{{.REDIS_DB}}"
           redis.enabled: "{{.REDIS_ENABLED}}"
-          mongodb.host: "{{.MONGODB_HOST}}"
-          mongodb.port: "{{.MONGODB_PORT}}"
-          mongodb.database: "{{.MONGODB_DB}}"
           easmApi.enabled: "{{.EASM_API_ENABLED}}"
           django.debug: "{{.DEBUG}}"
           django.secretKey: "{{.SECRET_KEY}}"
@@ -96,7 +49,6 @@ deploy:
           image.pullPolicy: Never
           postgresql.deploy: false
           redis.deploy: false
-          mongodb.deploy: false
         wait: false
 
 portForward:
@@ -115,8 +67,3 @@ portForward:
     namespace: "{{.K8S_NAMESPACE}}"
     port: 6379
     localPort: 6379
-  - resourceType: service
-    resourceName: mongodb
-    namespace: "{{.K8S_NAMESPACE}}"
-    port: 27017
-    localPort: 27017
