feat: Add EASM Dashboard UI with React and Material-UI
- Implemented complete dashboard layout
- Created reusable StatCard and InsightCard components
- Added 8 asset type cards (Domains, Hosts, Pages, SSL certs, ASNs, IP blocks, IPs, Contacts)
- Implemented 3-tier security insights (High/Medium/Low priority)
- Comprehensive documentation and setup guides

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "files.trimFinalNewlines": true,
     "editor.renderControlCharacters": true,
     "editor.renderWhitespace": "boundary",
-    "files.eolMarker": "lf"
+    "files.eolMarker": "lf",
+    "chatgpt.runCodexInWindowsSubsystemForLinux": true
 }
