--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -12,7 +12,9 @@ django-cors-headers>=4.3,<5.0
 python-decouple>=3.8,<4.0
 gunicorn>=21.2,<22.0
 drf-spectacular>=0.27,<1.0
-django-filter>=23.5,<24.0adfasdf
+django-filter>=23.5,<24.0
+pymongo>=4.6,<5.0
+dnspython>=2.4,<3.0
 
 # Development dependencies
 black>=24.1,<25.0
