feat(env): Read from skaffold.env only for both k8s and docker

--- a/skaffold.env.example
+++ b/skaffold.env.example
@@ -1,11 +1,12 @@
 # ===================================
 # EASM Application Environment Variables
 # ===================================
-# Copy this file to .env and modify values as needed
+# Single environment file for both Skaffold and Docker Compose
 
 # Django Settings
 DEBUG=True
 SECRET_KEY=django-insecure-change-this-to-a-random-secret-key-for-production
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,*
 
 # Database Configuration
 POSTGRES_DB=easm_db
@@ -18,6 +19,13 @@ POSTGRES_PORT=5432
 REDIS_HOST=redis-master
 REDIS_PORT=6379
 REDIS_DB=0
+
+# Exposed Ports Configuration (External/Local Ports Only)
+# These are the ports you use to access services from your machine
+# Internal container ports remain at their defaults (8000, 5432, 6379)
+API_LOCAL_PORT=8000
+POSTGRES_LOCAL_PORT=5432
+REDIS_LOCAL_PORT=6379
 
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
@@ -34,18 +42,28 @@ API_IMAGE_TAG=latest
 K8S_NAMESPACE=easm-rnd
 K8S_REPLICA_COUNT=1
 
+# Bitnami Chart Versions (for Skaffold)
+POSTGRESQL_CHART_VERSION=18.1.1
+REDIS_CHART_VERSION=23.2.1
+BITNAMI_REPO_URL=https://charts.bitnami.com/bitnami
+
+# Gunicorn Configuration (for Docker Compose)
+GUNICORN_WORKERS=4
+
 # ===================================
 # Instructions:
 # ===================================
-# 1. Copy this file: cp .env.example .env
-# 2. Update values in .env for your environment
+# This is the SINGLE environment file used by both:
+# - Skaffold (for Kubernetes deployments)
+# - Docker Compose (for local development)
+#
+# 1. Copy this file: cp skaffold.env.example skaffold.env (or copy on Windows)
+# 2. Update values in skaffold.env for your environment
 # 3. For production, change SECRET_KEY and POSTGRES_PASSWORD
 # 4. Set appropriate values for POSTGRES_HOST and REDIS_HOST:
 #    - For Docker Compose: use POSTGRES_HOST=postgres, REDIS_HOST=redis
 #    - For Kubernetes: use POSTGRES_HOST=postgresql, REDIS_HOST=redis-master
 #    - For local development: use POSTGRES_HOST=localhost, REDIS_HOST=localhost
+# 5. ALLOWED_HOSTS can contain comma-separated values (e.g., localhost,127.0.0.1,example.com)
 #
-# Note: ALLOWED_HOSTS with multiple values (comma-separated) may cause issues
-# with skaffold render command due to Helm --set parsing limitations.
-# For development, using ALLOWED_HOSTS=* works fine.
-# For production, consider using a single domain or modify the Helm template.
+# Note: This file is used by skaffold.yaml's envTemplate configuration
