Add service toggle variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,13 @@ API_IMAGE_TAG=latest
 K8S_NAMESPACE=easm-rnd
 K8S_REPLICA_COUNT=1
 
+# Service Toggle Configuration
+# Service ONLY disable when setting value is "False"
+# Other cases are enable
+POSTGRESQL_ENABLED=True
+REDIS_ENABLED=True
+EASM_API_ENABLED=True
+
 # ===================================
 # Instructions:
 # ===================================
