Add service toggle variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,12 @@ BITNAMI_REPO_URL=https://charts.bitnami.com/bitnami
 
 # Gunicorn Configuration (for Docker Compose)
 GUNICORN_WORKERS=4
+# Service Toggle Configuration
+# Service ONLY disable when setting value is "False"
+# Other cases are enable
+POSTGRESQL_ENABLED=True
+REDIS_ENABLED=True
+EASM_API_ENABLED=True
 
 # ===================================
 # Instructions:
