feat(env): Handle ',' issue in allowHosts of skaffold.env by creating dynamic yaml file

--- a/skaffold.env.example
+++ b/skaffold.env.example
@@ -6,6 +6,7 @@
 # Django Settings
 DEBUG=True
 SECRET_KEY=django-insecure-change-this-to-a-random-secret-key-for-production
+# Note: Commas are handled automatically by deployment scripts via generated values file
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,*
 
 # Database Configuration
@@ -64,6 +65,7 @@ GUNICORN_WORKERS=4
 #    - For Docker Compose: use POSTGRES_HOST=postgres, REDIS_HOST=redis
 #    - For Kubernetes: use POSTGRES_HOST=postgresql, REDIS_HOST=redis-master
 #    - For local development: use POSTGRES_HOST=localhost, REDIS_HOST=localhost
-# 5. ALLOWED_HOSTS can contain comma-separated values (e.g., localhost,127.0.0.1,example.com)
+# 5. ALLOWED_HOSTS: For Skaffold/Helm, escape commas with backslash (e.g., localhost\,127.0.0.1\,0.0.0.0\,*)
+#    For Docker Compose only, commas can be unescaped (e.g., localhost,127.0.0.1,0.0.0.0,*)
 #
 # Note: This file is used by skaffold.yaml's envTemplate configuration
