feat(env): Add mongodbPort in skaffold.ps1

--- a/skaffold.env.example
+++ b/skaffold.env.example
@@ -33,6 +33,7 @@ MONGODB_DB=easm_mongo
 API_LOCAL_PORT=8000
 POSTGRES_LOCAL_PORT=5432
 REDIS_LOCAL_PORT=6379
+MONGO_LOCAL_PORT=27017
 
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
