chore: Update skaffold.env.example to include MongoDB Config

--- a/skaffold.env.example
+++ b/skaffold.env.example
@@ -21,6 +21,12 @@ REDIS_HOST=redis-master
 REDIS_PORT=6379
 REDIS_DB=0
 
+# MongoDB Configuration
+MONGODB_HOST=mongodb
+MONGODB_PORT=27017
+MONGODB_DB=easm_mongo
+
+
 # Exposed Ports Configuration (External/Local Ports Only)
 # These are the ports you use to access services from your machine
 # Internal container ports remain at their defaults (8000, 5432, 6379)
