feat(service): MongoDB is now supported

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,13 @@ REDIS_HOST=redis-master
 REDIS_PORT=6379
 REDIS_DB=0
 
+# MongoDB Configuration
+MONGODB_HOST=mongodb
+MONGODB_PORT=27017
+MONGODB_DATABASE=easm_db
+MONGODB_USERNAME=easm_user
+MONGODB_PASSWORD=easm_password
+
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
 JWT_REFRESH_TOKEN_LIFETIME=1440
@@ -39,6 +46,7 @@ K8S_REPLICA_COUNT=1
 # Other cases are enable
 POSTGRESQL_ENABLED=True
 REDIS_ENABLED=True
+MONGODB_ENABLED=True
 EASM_API_ENABLED=True
 
 # ===================================
