--- a/src/charts/easm-api/templates/secret.yaml
+++ b/src/charts/easm-api/templates/secret.yaml
@@ -11,4 +11,7 @@ stringData:
   {{- if and .Values.postgresql.enabled (ne (.Values.postgresql.enabled | toString) "False") }}
   POSTGRES_PASSWORD: {{ .Values.postgresql.password | quote }}
   {{- end }}
+  {{- if and .Values.mongodb.enabled (ne (.Values.mongodb.enabled | toString) "False") }}
+  MONGODB_PASSWORD: {{ .Values.mongodb.password | quote }}
+  {{- end }}
 {{- end }}
