--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -49,16 +49,17 @@ deploy:
       - name: mongodb
         remoteChart: mongodb
         repo: https://charts.bitnami.com/bitnami
-
         version: "16.3.1"
         namespace: "{{.K8S_NAMESPACE}}"
         createNamespace: true
         setValues:
-          auth.enabled: false
-          architecture: standalone
+          auth.rootPassword: easm_password
+          auth.username: easm_user
+          auth.password: easm_password
+          auth.database: easm_db
           persistence.enabled: false
-          image.pullPolicy: IfNotPresent
           image.tag: latest
+          image.pullPolicy: IfNotPresent
         wait: false
 
       # EASM API from local Helm chart
@@ -84,7 +85,10 @@ deploy:
           redis.enabled: "{{.REDIS_ENABLED}}"
           mongodb.host: "{{.MONGODB_HOST}}"
           mongodb.port: "{{.MONGODB_PORT}}"
-          mongodb.database: "{{.MONGODB_DB}}"
+          mongodb.database: "{{.MONGODB_DATABASE}}"
+          mongodb.username: "{{.MONGODB_USERNAME}}"
+          mongodb.password: "{{.MONGODB_PASSWORD}}"
+          mongodb.enabled: "{{.MONGODB_ENABLED}}"
           easmApi.enabled: "{{.EASM_API_ENABLED}}"
           django.debug: "{{.DEBUG}}"
           django.secretKey: "{{.SECRET_KEY}}"
@@ -96,7 +100,6 @@ deploy:
           image.pullPolicy: Never
           postgresql.deploy: false
           redis.deploy: false
-          mongodb.deploy: false
         wait: false
 
 portForward:
