--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,11 @@ MONGODB_DB=easm_mongo
 API_LOCAL_PORT=8000
 POSTGRES_LOCAL_PORT=5432
 REDIS_LOCAL_PORT=6379
+
 MONGO_LOCAL_PORT=27017
+MONGODB_DATABASE=easm_db
+MONGODB_USERNAME=easm_user
+MONGODB_PASSWORD=easm_password
 
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
@@ -62,6 +66,7 @@ GUNICORN_WORKERS=4
 # Other cases are enable
 POSTGRESQL_ENABLED=True
 REDIS_ENABLED=True
+MONGODB_ENABLED=True
 EASM_API_ENABLED=True
 
 # ===================================
