feat(api): Add scanner app to global healthcheck (in /api/)

--- a/skaffold.env
+++ b/skaffold.env
@@ -25,7 +25,6 @@ REDIS_DB=0
 MONGODB_HOST=mongodb
 MONGODB_PORT=27017
 MONGODB_DB=easm_mongo
-MONGO_LOCAL_PORT=27017
 
 # Exposed Ports Configuration (External/Local Ports Only)
 # These are the ports you use to access services from your machine
@@ -33,7 +32,6 @@ MONGO_LOCAL_PORT=27017
 API_LOCAL_PORT=8000
 POSTGRES_LOCAL_PORT=5432
 REDIS_LOCAL_PORT=6379
-MONGODB_LOCAL_PORT=27017
 
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
@@ -53,18 +51,10 @@ K8S_REPLICA_COUNT=1
 # Bitnami Chart Versions (for Skaffold)
 POSTGRESQL_CHART_VERSION=18.1.1
 REDIS_CHART_VERSION=23.2.1
-MONGODB_CHART_VERSION=16.3.1
 BITNAMI_REPO_URL=https://charts.bitnami.com/bitnami
 
 # Gunicorn Configuration (for Docker Compose)
 GUNICORN_WORKERS=4
-# Service Toggle Configuration
-# Service ONLY disable when setting value is "False"
-# Other cases are enable
-POSTGRESQL_ENABLED=True
-REDIS_ENABLED=True
-MONGODB_ENABLED=True
-EASM_API_ENABLED=True
 
 # ===================================
 # Instructions:
@@ -73,14 +63,14 @@ EASM_API_ENABLED=True
 # - Skaffold (for Kubernetes deployments)
 # - Docker Compose (for local development)
 #
-# 1. Copy this file: cp .env.example .env (or copy on Windows)
-# 2. Update values in .env for your environment
+# 1. Copy this file: cp skaffold.env.example skaffold.env (or copy on Windows)
+# 2. Update values in skaffold.env for your environment
 # 3. For production, change SECRET_KEY and POSTGRES_PASSWORD
 # 4. Set appropriate values for POSTGRES_HOST and REDIS_HOST:
 #    - For Docker Compose: use POSTGRES_HOST=postgres, REDIS_HOST=redis
 #    - For Kubernetes: use POSTGRES_HOST=postgresql, REDIS_HOST=redis-master
 #    - For local development: use POSTGRES_HOST=localhost, REDIS_HOST=localhost
-# 5. ALLOWED_HOSTS: Use standard comma-separated format (e.g., localhost,127.0.0.1,0.0.0.0,*)
-#    Deployment scripts automatically handle commas via generated values files
+# 5. ALLOWED_HOSTS: For Skaffold/Helm, escape commas with backslash (e.g., localhost\,127.0.0.1\,0.0.0.0\,*)
+#    For Docker Compose only, commas can be unescaped (e.g., localhost,127.0.0.1,0.0.0.0,*)
 #
 # Note: This file is used by skaffold.yaml's envTemplate configuration
